# trade-journal

./: .dockerignore  .env.example  .gitignore  AUTH_FIX_SUMMARY.md  AUTH_SYSTEM_IMPLEMENTATION.md  CLAUDE.md  CLAUDE.md.orig  Dockerfile  FIXES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  LEGACY_CLEANUP_SUMMARY.md  README.md  REQUIREMENTS.md  RIVN_FIX_SUMMARY.md  TAURI_BUILD_GUIDE.md  TAURI_SETUP.md  add_order_id_support.py  admin_app.py  alembic.ini  analyze_ibit_rolls.py  analyze_ibit_strategy.py  analyze_mstr_issue.py  analyze_new_ibit.py  analyze_pnl_logic.py  analyze_roll.py  analyze_roll_context.py  analyze_spx_expiration.py  app.py  application_startup_sequence.puml  apply_account_separation_fix.py  apply_closing_order_fix.py  apply_partial_close_fix.py  apply_roll_detection.py  backup_legacy_tables.py  backup_obsolete_tables.py  backup_option_legs_20250725_181703.json  backup_positions_new_20250725_181703.json  backup_trades_20250725_181703.json  build-tauri.bat  build-tauri.sh  (+175 more)
.claude/: settings.local.json
admin/: dependencies.py  middleware.py
alembic/: env.py
config/: strategies.json
docs/: STRATEGY_CONFIGURATION.md  frontend-refactor-plan.md  frontend-review-design-updates-r1.md  frontend-review-design-updates-r2.md  roll-detection-spec.md  schema-proposal-v3.md  tastytrade-api.md
frontend/: package.json  tailwind.config.js  vite.config.js
issues/: INDEX.md  OPT-1.md  OPT-10.md  OPT-100.md  OPT-101.md  OPT-102.md  OPT-103.md  OPT-104.md  OPT-105.md  OPT-106.md  OPT-107.md  (+282 more)
src-tauri/: Cargo.toml  splash.html  tauri.conf.json
src-tauri/src/: main.rs
(+312 files in other folders)
